[package]
name = "keyboard"
version = "0.1.0"
authors = ["blolya <mast-94@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rt = "0.6.12"
panic-reset = "0.1.0"
stm32f1 = {version = "0.12.1", features = ["stm32f103", "rt"]}
peris = { path = "./crates/peris"}

[[bin]]
bench = false
name = "keyboard"
test = false
[profile.release]
codegen-units = 1
debug = true
lto = true